# python-project-50

./: .coverage  .gitignore  Makefile  README.md  codeclimate.yml  coverage.xml  pyproject.toml
gendiff/: __init__.py  consts.py  diff.py  difference_checker.py  generate.py  generate_diff.py  input_parser.py  parsing.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_gendiff.py  test_generate_diff.py
tests/fixtures/: output.py  right_result.py
